# zenith

./: .gitignore  Cargo.toml  Makefile
assets/enemies/suicido/: Sprite-0001.aseprite  explosion.aseprite  pinkball.aseprite
assets/juice/: ring_shrink.aseprite
assets/lenny/: ship.aseprite
assets/play/: learn.aseprite  spetrum  test-grid.aseprite  texture.aseprite
assets/ship/: palette.pal  scratch_main.aseprite  ship.aseprite  ship_light.aseprite  ship_spotlight.aseprite
assets/ship/weapons/: bullet.aseprite
bevy_mobile_example.xcodeproj/: project.pbxproj
src/: consts.rs  desktop.rs  lib.rs  lifecycle.rs  macros.rs  main.rs  math.rs  particles.rs  roots.rs  zenith.rs  zenith_ios.rs
src/animation/: animation_manager.rs  macros.rs  manager.rs  manager_ref.rs  mat.rs  mesh.rs  mod.rs  texture_manager.rs
src/animation/defns/: juice.rs  mod.rs  planet_textures.rs  ship_animation.rs  star_animation.rs  suicido_animation.rs
src/camera/: mod.rs  parallax.rs
src/debug/: dphysics.rs  mod.rs
src/enemy/: mod.rs  suicido.rs
src/environment/: mod.rs  planet.rs  star.rs
src/input/: desktop_input.rs  mod.rs  reference.rs
src/juice/: mod.rs
src/layer/: mats.rs  mod.rs
src/mirage/: mirage_drawing.rs  mirage_physics.rs  mod.rs
src/physics/: bounds.rs  bullet_time.rs  collisions.rs  dyno.rs  follow.rs  logic.rs  mod.rs  patrol.rs  statics.rs  triggers.rs
src/ship/: launch_juice.rs  mod.rs  ship_bullet.rs  ship_cannon.rs
src/sound/: music.rs
src/state/: mod.rs  room.rs
zenith.xcodeproj/: project.pbxproj
(+1 files in other folders)
