[package]
name = "zenith"
# Version is required by `cargo-apk`, though this value will never change.
version = "0.0.0"
edition = "2021"
description = "Explore the cosmos..."

[lib]
name = "zenith"
path = "src/zenith.rs"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.14.0" }

[target.aarch64-apple-ios-sim.dependencies]
bevy = { version = "0.14.0", features = ["ios_simulator"] }

[package.metadata.android]
package = "org.dreamlake.zenith"
apk_name = "zenith"
assets = "assets"
resources = "assets/android-res"
# This strips debug symbols from the shared libraries, drastically reducing APK size. If you need them, remove the option.
strip = "strip"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]

[package.metadata.android.sdk]
target_sdk_version = 34

[package.metadata.android.application]
# icon = "@mipmap/ic_launcher"
label = "zenith-label"
